# Cyclops

./: .gitignore  .gitmodules  BatteryHolder.FCStd  README.md  TODO.txt  froggie.FCStd  install.md  stecksconf_talk.odp
ROS/: .gitignore  mkvbag.py  numpy_shares.py  recorder.py  tof_reader.py
ROS/rosclops/: cam_info_mgr.py  ros1sink.py
ROS2/cyclops/: package.xml  setup.cfg  setup.py
ROS2/cyclops_cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
ROS2/cyclops_cpp/src/: register.cpp
ROS2/cyclops_interfaces/: CMakeLists.txt  package.xml
ROS2/cyclops_interfaces/action/: Calibrate.action  MakeModel.action
ROS2/cyclops_interfaces/msg/: Sync.msg
ROS2/cyclops_interfaces/srv/: Beep.srv  BeepPreset.srv
ROS2/tof/: package.xml  setup.cfg  setup.py
SLAM/: deblur.py  find_masks.py  frames.py  keyframes.py  keypoints_json.py  match_frames.py  vid_clean.py
TOF/: cam_registration.py  depth_reader.py  extractor.py  glitch_detector.py  notes.txt  optimize_posegraph.py  sfm.py  tof_reader.py
case/: case.stl  clipa.stl  clipb.stl  diffraction.lbrn2  frame.FCStd  frame.stl  lid.stl  slider.stl
case2/: case.FCStd
charger_mod/charger_mod/: sym-lib-table
docker/: Dockerfile  build_image.sh  requirements.txt  run_image.sh  run_image_radxa.sh
enclosures/: main.FCStd  vent.FCStd
experiments/: sifty.py  tracer.py  vectors.py
froggie/imu/: imu.kicad_pcb  imu.kicad_sch
gstreamer/: apt_requirements  calibrate.py  calibrate.sh  calibration.json  find_cameras.py  find_cameras2.py  icm.py  imu_data.py  recorder.py  requirements.txt  snapshot.sh  stream_reader.sh  streamer.sh  test.sh  test_calibration.py  test_imu_only.sh  test_usb.sh  timings.py  tmp.sh
gstreamer/python/: TOFD_cam.py  TOF_cam.py  calibration.json  icm.py  imu_data.py  mag_cal
hardware/cyclops/: .gitignore  Cyclops.kicad_sym  cyclops.kicad_pcb  cyclops.kicad_prl  cyclops.kicad_pro  cyclops.kicad_sch  fp-info-cache  fp-lib-table  millproject  sym-lib-table
kalibr/: Dockerfile  ros_entrypoint.sh
kalman/: analyse.py  kalman.py  results.py
kalman/ROS/: plans
keyframes/: keyframe_selector.py
openMVS/: Dockerfile  make_docker.sh  make_laptop.sh  make_refined.sh  make_rough.sh  run_in_docker.sh
pcb/imu/: fp-info-cache  (+2 more)
raspbian/: AP.nmconnection  beep_client_example.py  beep_server.py  beep_server.service  beeper.py  bq25895_setup.py  get_model_image.py  gunicorn.service  make_diffraction.py  make_model.py  merge_maps.py  multicast-loopback.service  ros2_cyclops.service  run_laptop.sh  start_gunicorn.sh  tof_reader.py  utils.py
reader/: IMUCalibration.py  LensCalibration.py  calibrate.py  calibrate_imu.py  calibrate_lens.py  camera_calibration.txt  cyclopsreader.py  double_calibration.py  gstreader.py  imu.py  manual_calibration.py  read_combined.py  tracking.py  viewer.py
tof_dev/: fp-info-cache  fp-lib-table  sym-lib-table  tof_dev.kicad_pcb  tof_dev.kicad_prl  tof_dev.kicad_pro  tof_dev.kicad_sch  tof_dev.step  v4.kicad_sym
v3/: .gitignore  CM5IO.kicad_pcb  CM5IO.kicad_prl  CM5IO.kicad_pro  CM5IO.kicad_sch  CM5_GPIO.kicad_sch  CM5_HighSpeed.kicad_sch  README.TXT  cm5_group.kicad_sym  fp-info-cache  fp-lib-table  power.kicad_sch  sym-lib-table
vertex/: main.FCStd
www/: index.html  jz  ply_viewer.html
(+182 files in other folders)
