<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyclops_interfaces</name>
  <version>0.0.0</version>
  <description>Interface for cyclops</description>
  <maintainer email="beardydoc@gmail.com">pi</maintainer>
  <license>MIT</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
